MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/EscrowAccount__c.object-meta.xml
<CustomObject>
    <label>Escrow Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Escrow Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escrow Accounts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>