MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/ADM_Processing_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>ADM_Processing_Channel_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Processing Channel Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>