MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/AvailableVirtualAccounts__c.field-meta.xml
<CustomField>
    <fullName>AvailableVirtualAccounts__c</fullName>
    <label>Available Virtual Accounts</label>
    <summaryFilterItems>
        <field>VirtualAccount__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>VirtualAccount__c.EscrowAccount__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>