MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/BeneficiaryName__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>