MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>