MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/Current_Acc_Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Acc_Merchant_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Acc Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>