MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/Current_Account_Branch__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Account Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>