MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/Has_UAEDDS__c.field-meta.xml
<CustomField>
    <fullName>Has_UAEDDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has UAEDDS</label>
    <type>Checkbox</type>
</CustomField>