MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/IBANNo__c.field-meta.xml
<CustomField>
    <fullName>IBANNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>