MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/MerchantID__c.field-meta.xml
<CustomField>
    <fullName>MerchantID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merchant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>