MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/MIDPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>MIDPaymentLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MID Payment Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>