MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/MIDPOSMachine__c.field-meta.xml
<CustomField>
    <fullName>MIDPOSMachine__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MID -POS Machine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>