MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/OIC__c.field-meta.xml
<CustomField>
    <fullName>OIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>