MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/POBox__c.field-meta.xml
<CustomField>
    <fullName>POBox__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>