MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/StoreId__c.field-meta.xml
<CustomField>
    <fullName>StoreId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>