MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/TradeID__c.field-meta.xml
<CustomField>
    <fullName>TradeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>