MODON MRE BPDEV/force-app/main/default/objects/EscrowAccount__c/fields/VACUSTIDNT__c.field-meta.xml
<CustomField>
    <fullName>VACUSTIDNT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>VACUSTIDNT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>